--- a/templates/indview.html
+++ b/templates/indview.html
@@ -32,7 +32,7 @@
 
   <!-- Bootstrap CSS File -->
   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/pptxjs.css' %}"> -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification30.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification32.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -587,7 +587,7 @@ debugger;
 
                    <div id="sidebar" class="sidebar">
                      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                     <div class="list-group panel">
+                     <div class="list-group">
                                {%  for item in mlist %}
                                      <!-- <a href="#">{{item.name}}</a> -->
                                   <a href="#menu{{item.id}}" class=" collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><span class="hidden-sm-down">{{item.name}}</span> </a>
