--- a/templates/services.html
+++ b/templates/services.html
@@ -23,7 +23,7 @@
     <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
-
+  <!-- <link href="{% static 'lib/mdb/mdb.min.css' %}" rel="stylesheet"> -->
 
     <!-- Libraries CSS Files -->
     <link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
@@ -39,6 +39,8 @@
     <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
     <script src="{% static 'lib/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+      <!-- <script src="{% static 'js/mdbJS/mdb.min.js' %}"></script> -->
     <script src="{% static 'lib/easing/easing.min.js' %}"></script>
     <script src="{% static 'lib/mobile-nav/mobile-nav.js' %}"></script>
     <script src="{% static 'lib/wow/wow.min.js'%}"></script>
@@ -390,23 +392,7 @@ function likebutton() {
             </div>
           </section>
 
-          <div class="modal fade" id="myModal" role="dialog">
-             <div class="modal-dialog">
-              <div class="modal-content">
-              <div class="modal-header">
-                  <h4 class="modal-title" id ="modalTitle"></h4>
-              </div>
-              <div class="modal-body" id ="modalBody">
-                  <!-- <p>Some text in the modal.</p> -->
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
-              </div>
-           </div>
-        </div>
-      </div>
 
-        </div>
 
 
 
