--- a/templates/indview.html
+++ b/templates/indview.html
@@ -47,6 +47,7 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
 
   <!-- Uncomment below i you want to use a preloader -->
   <!-- <div id="preloader"></div> -->
@@ -746,8 +747,13 @@ New code-->
                                <div class="row">
                                 {% for i in model.inputs_csv %}
                                    <div class="col-md-6">
+                                      {% if 'TEXT' == i.0 %}
+                                         <label for="inputEmail5">{{i.0}}</label>
+                                         <textarea rows="10" cols="150">{{i.1}}</textarea>
+                                     {% else %}
                                      <label for="inputEmail4">{{i.0}}</label>
-                                     <input type="name" title={{i.0}} class="form-control" id="inputEmail4"  value={{i.1}}>
+                                     <input type="name" title={{i.0}} class="form-control" id="inputEmail4"  value="{{i.1}}">
+                                     {% endif %}
                                   </div>
                                 {% endfor %}
                                </div>
